--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,4 +1,4 @@
-* {
+ * {
   margin:0;
   padding:0;
   box-sizing: border-box;
@@ -24,7 +24,7 @@ textarea {
 
 a:link {
   text-decoration: none;
-
+  color: ;
 }
 
 .header {
@@ -95,7 +95,7 @@ textarea:focus {
 
 .emoticons-box {
   width: 300px;
-  /*height: 96px;*/
+  /*height: 135px;*/
   max-height: 500px;
   background: white;
   /*padding: 10px;*/
@@ -107,15 +107,15 @@ textarea:focus {
   /*display: inline;*/
 }
 
-
 .emoticons {
   padding-top: 10px;
+  height:auto;
 }
 
 .emoticons li {
   height: 30px;
   width: 30px;
-  margin: 0px 5px 5px 5px;
+  margin: 0px 5px 10px 5px;
   background: #ebebeb;
   display:inline-block;
 
@@ -126,6 +126,18 @@ textarea:focus {
   cursor: pointer;
 }
 
+
+.emoticons-links {
+  height: 30px;
+  font-size: 12px;
+  text-align: left;
+  border-top: 1px solid #eee;
+  width: 100%;
+  /*padding: 5px;*/
+
+}
+
+.emoticons-links ul,
 .emoticons-links li {
   list-style-type: none;
   margin: 0;
@@ -135,23 +147,13 @@ textarea:focus {
 
 }
 
-
-.emoticons-links {
-  font-size: 12px;
-  text-align: left;
-  border-top: 1px solid #eee;
-  width: 100%;
-  /*padding: 5px;*/
-
-}
-
 .emoticons-links a {
   padding: 0 10px;
   line-height: 30px;
   display: inline-block;
   margin-top: -1px;
   text-decoration: none;
-  /*float:left;*/
+  color: #000;
 }
 
 .emoticons-links a:hover {
@@ -161,7 +163,6 @@ textarea:focus {
 }
 .emoticons-links a:active {
   color: tomato;
-  box-sizing: border-box;
   border-top: 1px solid tomato;
   cursor: pointer;
 }
@@ -202,7 +203,6 @@ button:hover {
   position: absolute;
   top: 10px;
   right: 20px;
-  color: grey;
   /*border: 1px solid tomato;*/
 }
 
