--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -156,12 +156,8 @@ textarea:focus {
   color: #000;
 }
 
-.emoticons-links a:hover {
-  color: tomato;
-  border-top: 1px solid tomato;
-  cursor: pointer;
-}
-.emoticons-links a:active {
+.emoticons-links a:hover,
+.emoticons-links a.active {
   color: tomato;
   border-top: 1px solid tomato;
   cursor: pointer;
@@ -214,7 +210,36 @@ button:hover {
   fill: #333;
 }
 
+.ui-tooltip {
+  position:relative;
+  background: #000;
+  padding: 5px 10px;
+  font-size: 12px;
+  overflow: visible !important;
+  color: #fff;
+  text-align: center;
+  opacity: 0.8;
+  display: inline-block;
 
+}
+
+.ui-tooltip::before {
+  width: 0;
+  height: 0;
+  content:"\A";
+  position:absolute;
+  border: 5px solid;
+  border-color: transparent transparent #000 transparent;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -5px;
+  z-index: 1;
+}
+
+.ui-tooltip-content {
+  max-width: 100px;
+  width: auto !important;
+}
 
 .last-container {
   display: inline-block;
